--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 	</head>
 	<body>
 		<div class="navbar">
@@ -11,7 +12,7 @@
 			<a class="inactive" href="aircraft.htm">Aircraft and Development</a>
 			<a class="inactive" href="sponsors.htm">Sponsors</a>
 			<a class="inactive" href="contact.htm">Contact Us</a>
-			<a>[logo]</a>
+			<img class="inline" src="strath.jpg">
 		</div>
 		<img class="banner" src="banner.png">
 		<h1> Design<span class="yellow">,</span> Build<span class="yellow">,</span> Fly </h1>
@@ -19,6 +20,18 @@
 			<img class="right" src="team.png">
 			<p> We are the Human Powered Flight society from Strathclyde University. We are a student run organisation that consists mostly of engineers from across the faculty. </p>
 			<p> We were officially founded in the summer of 2022, and have since begun the design of a human-powered aircraft called AETHER that we hope to build and fly over the course of next academic year. </p>
+			<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+			<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget dolor morbi non arcu. Porttitor lacus luctus accumsan tortor posuere ac ut consequat semper. Vestibulum morbi blandit cursus risus at ultrices mi tempus. Congue eu consequat ac felis donec et. Dui ut ornare lectus sit. Nibh ipsum consequat nisl vel. In est ante in nibh mauris cursus. Nibh mauris cursus mattis molestie. Erat pellentesque adipiscing commodo elit at imperdiet dui. Pellentesque eu tincidunt tortor aliquam. </p>
+			<p> Quis commodo odio aenean sed adipiscing. Sit amet porttitor eget dolor morbi non arcu. Adipiscing elit pellentesque habitant morbi tristique senectus et. Tincidunt lobortis feugiat vivamus at augue. Nunc faucibus a pellentesque sit amet porttitor eget dolor. Molestie ac feugiat sed lectus. Id ornare arcu odio ut sem nulla pharetra diam. Ut sem nulla pharetra diam sit amet nisl suscipit adipiscing. Tellus at urna condimentum mattis pellentesque. Elementum sagittis vitae et leo duis ut. Bibendum arcu vitae elementum curabitur. Diam in arcu cursus euismod. </p>
 		</div>
+		<div class="footer">
+			<p> © HPF Strathclyde 2023 </p>
+			<a target = "blank" href = 'https://www.youtube.com/channel/[TODO]'><i class="fab fa-youtube"></i></a>
+			<a target = "blank" href='https://twitter.com/[TODO]' ><i class="fab fa-twitter"></i></a>
+			<a target = "blank" href='https://www.facebook.com/[TODO]/'><i class='fab fa-facebook'></i></a>
+			<a target = "blank" href='https://www.instagram.com/[TODO]'><i class='fab fa-instagram'></i></a>
+			<a target="blank" href="https://discordapp.com/invite/[TODO]"> <i class="fab fa-discord"></i></a>
+		</div>
+
 	</body>
 </html>
