--- a/index.htm
+++ b/index.htm
@@ -5,9 +5,8 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 	</head>
 	<body>
-		<script src="scripts.js"></script>
 		<div id="navbar" class="navbar">
-			<a class="title">HPF STRATH</a>
+			<a id="title">HPF STRATH</a>
 			<a class="active" href="index.htm">About Us</a>
 			<a class="inactive" href="team.htm">Team</a>
 			<a class="inactive" href="aircraft.htm">Aircraft and Development</a>
@@ -36,4 +35,5 @@
 		</div>
 
 	</body>
+	<script src="scripts.js"></script>
 </html>
