--- a/index.htm
+++ b/index.htm
@@ -15,15 +15,15 @@
 			<img id="strath-logo" src="strath.jpg">
 			<a href="javascript:void(0);" class="icon" onclick="burger_menu()"><i class="fa fa-bars"></i></a>
 		</div>
-		<img class="banner" src="banner.png">
+		<img class="banner" src="banner.jpg">
 		<h1> Design<span class="yellow">,</span> Build<span class="yellow">,</span> Fly </h1>
 		<div class="text">
-			<img class="right" src="team.png">
-			<p> We are the Human Powered Flight society from Strathclyde University. We are a student run organisation that consists mostly of engineers from across the faculty. </p>
-			<p> We were officially founded in the summer of 2022, and have since begun the design of a human-powered aircraft called AETHER that we hope to build and fly over the course of next academic year. </p>
-			<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-			<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget dolor morbi non arcu. Porttitor lacus luctus accumsan tortor posuere ac ut consequat semper. Vestibulum morbi blandit cursus risus at ultrices mi tempus. Congue eu consequat ac felis donec et. Dui ut ornare lectus sit. Nibh ipsum consequat nisl vel. In est ante in nibh mauris cursus. Nibh mauris cursus mattis molestie. Erat pellentesque adipiscing commodo elit at imperdiet dui. Pellentesque eu tincidunt tortor aliquam. </p>
-			<p> Quis commodo odio aenean sed adipiscing. Sit amet porttitor eget dolor morbi non arcu. Adipiscing elit pellentesque habitant morbi tristique senectus et. Tincidunt lobortis feugiat vivamus at augue. Nunc faucibus a pellentesque sit amet porttitor eget dolor. Molestie ac feugiat sed lectus. Id ornare arcu odio ut sem nulla pharetra diam. Ut sem nulla pharetra diam sit amet nisl suscipit adipiscing. Tellus at urna condimentum mattis pellentesque. Elementum sagittis vitae et leo duis ut. Bibendum arcu vitae elementum curabitur. Diam in arcu cursus euismod. </p>
+			<img class="right" src="team.jpg">
+			<p> We are HPF Strath, the Human Powered Flight society from Strathclyde University, a student run organisation that consists of students, mostly of engineers, from across the university. </p>
+			<p> We were officially founded in the summer of 2022, and by a small group of 4 engineers with the aim of becoming the 2nd student led HPF team in the UK, and the 1st in Scotland. During the 2022/2023 academic year, we’ve since expanded to an active team of 15+ members. </p>
+			<img class="left" src="team2.jpg">
+			<p> So far, we’ve completed the design for our first Human Powered Aircraft (HPA), called the A.E.T.H.E.R, and are moving into the production stage next year, as well as training a group of pilots to fly the HPA once it’s completed. </p>
+			<p> This year we attended the Icarus Cup, a HPA competition help yearly by the Royal Aeronautical Society, under Aerocycle. We hope to eventually attend this event with our own HPA, and to compete against other teams from around the UK. </p>
 		</div>
 		<div class="footer">
 			<p> © HPF Strathclyde 2023 </p>
