--- a/index.htm
+++ b/index.htm
@@ -6,13 +6,13 @@
 	</head>
 	<body>
 		<div id="navbar" class="navbar">
-			<a id="title">HPF STRATH</a>
+			<img id="hpf-logo" src="hpflogo.png">
 			<a class="active" href="index.htm">About Us</a>
 			<a class="inactive" href="team.htm">Team</a>
 			<a class="inactive" href="aircraft.htm">Aircraft and Development</a>
 			<a class="inactive" href="sponsors.htm">Sponsors</a>
 			<a class="inactive" href="contact.htm">Contact Us</a>
-			<img id="strath-logo" src="strath.jpg">
+			<img id="strath-logo" src="strath.png">
 			<a href="javascript:void(0);" class="icon" onclick="burger_menu()"><i class="fa fa-bars"></i></a>
 		</div>
 		<img class="banner" src="banner.jpg">
