--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div id="navbar" class="navbar">
-			<img id="hpf-logo" src="hpflogo.png">
+			<img id="hpf-logo" src="hpf.png">
 			<a class="active" href="index.htm">About Us</a>
 			<a class="inactive" href="team.htm">Team</a>
 			<a class="inactive" href="aircraft.htm">Aircraft and Development</a>
