--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,7 @@
 	<head>
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300">
 	</head>
 	<body>
 		<div id="navbar" class="navbar">
@@ -20,7 +21,7 @@
 		<div class="text">
 			<img class="right" src="team.jpg">
 			<p> We are HPF Strath, the Human Powered Flight society from Strathclyde University, a student run organisation that consists of students, mostly of engineers, from across the university. </p>
-			<p> We were officially founded in the summer of 2022, and by a small group of 4 engineers with the aim of becoming the 2nd student led HPF team in the UK, and the 1st in Scotland. During the 2022/2023 academic year, we’ve since expanded to an active team of 15+ members. </p>
+			<p> We were officially founded in the summer of 2022, and by a small group of 4 engineers with the aim of becoming the 2<sup>nd</sup> student led HPF team in the UK, and the 1<sup>st</sup> in Scotland. During the 2022/2023 academic year, we’ve since expanded to an active team of 15+ members. </p>
 			<img class="left" src="team2.jpg">
 			<p> So far, we’ve completed the design for our first Human Powered Aircraft (HPA), called the A.E.T.H.E.R, and are moving into the production stage next year, as well as training a group of pilots to fly the HPA once it’s completed. </p>
 			<p> This year we attended the Icarus Cup, a HPA competition help yearly by the Royal Aeronautical Society, under Aerocycle. We hope to eventually attend this event with our own HPA, and to compete against other teams from around the UK. </p>
