--- a/index.htm
+++ b/index.htm
@@ -19,20 +19,21 @@
 		<img class="banner" src="banner.jpg">
 		<h1> Design<span class="yellow">,</span> Build<span class="yellow">,</span> Fly </h1>
 		<div class="text">
-			<img class="right" src="team.jpg">
+			<img class="right yellow-shadow" src="team.jpg">
 			<p> We are HPF Strath, the Human Powered Flight society from Strathclyde University, a student run organisation that consists of students, mostly of engineers, from across the university. </p>
 			<p> We were officially founded in the summer of 2022, and by a small group of 4 engineers with the aim of becoming the 2<sup>nd</sup> student led HPF team in the UK, and the 1<sup>st</sup> in Scotland. During the 2022/2023 academic year, we’ve since expanded to an active team of 15+ members. </p>
-			<img class="left" src="team2.jpg">
+			<img class="left blue-shadow" src="team2.jpg">
 			<p> So far, we’ve completed the design for our first Human Powered Aircraft (HPA), called the A.E.T.H.E.R, and are moving into the production stage next year, as well as training a group of pilots to fly the HPA once it’s completed. </p>
 			<p> This year we attended the Icarus Cup, a HPA competition help yearly by the Royal Aeronautical Society, under Aerocycle. We hope to eventually attend this event with our own HPA, and to compete against other teams from around the UK. </p>
 		</div>
 		<div class="footer">
-			<p> © HPF Strathclyde 2023 </p>
-			<a target = "blank" href = 'https://www.youtube.com/channel/[TODO]'><i class="fab fa-youtube"></i></a>
-			<a target = "blank" href='https://twitter.com/[TODO]' ><i class="fab fa-twitter"></i></a>
-			<a target = "blank" href='https://www.facebook.com/[TODO]/'><i class='fab fa-facebook'></i></a>
-			<a target = "blank" href='https://www.instagram.com/[TODO]'><i class='fab fa-instagram'></i></a>
-			<a target="blank" href="https://discordapp.com/invite/[TODO]"> <i class="fab fa-discord"></i></a>
+			<a href="https://www.strathunion.com/">
+				<img class=footer-image src="union.png">
+			</a>
+			<img class=footer-image src="bar.png">
+			<a href="https://www.instagram.com/hpfstrath/">
+				<img class=footer-image src="insta.png">
+			</a>
 		</div>
 
 	</body>
