--- a/team.htm
+++ b/team.htm
@@ -18,12 +18,10 @@
 		</div>
 		<table class=outer>
 			<tr>
-				<th colspan=3>
-					Management
-				</th>
+				<th colspan=3 class=big-th> Management </th>
 			</tr>
 			<tr>
-				<td>
+				<div class=responsive-td>
 					<table class="inner">
 						<tr>
 							<th>
@@ -38,16 +36,16 @@
 							</th>
 						</tr>
 						<tr>
-							<th> Firefly DVD </th>
-							<th> Firefly DVD </th>
+							<th class=small-th> Firefly DVD </th>
+							<th class=small-th> Firefly DVD </th>
 						</tr>
 						<tr>
 							<td> Brand Manager </td>
 							<td> Team Leader <br> Aerodynamic Lead </td>
 						</tr>
 					</table>
-				</td>
-				<td>
+				</div>
+				<div class=responsive-td>
 					<table class="inner">
 						<tr>
 							<th>
@@ -62,16 +60,16 @@
 							</th>
 						</tr>
 						<tr>
-							<th> Firefly DVD </th>
-							<th> Firefly DVD </th>
+							<th class=small-th> Firefly DVD </th>
+							<th class=small-th> Firefly DVD </th>
 						</tr>
 						<tr>
 							<td> Brand Manager </td>
 							<td> Team Leader <br> Aerodynamic Lead </td>
 						</tr>
 					</table>
-				</td>
-				<td>
+				</div>
+				<div class=responsive-td>
 					<table class="inner">
 						<tr>
 							<th>
@@ -86,89 +84,86 @@
 							</th>
 						</tr>
 						<tr>
-							<th> Firefly DVD </th>
-							<th> Firefly DVD </th>
+							<th class=small-th> Firefly DVD </th>
+							<th class=small-th> Firefly DVD </th>
 						</tr>
 						<tr>
 							<td> Brand Manager </td>
 							<td> Team Leader <br> Aerodynamic Lead </td>
 						</tr>
 					</table>
-				</td>
+				</div>
 			</tr>
 			<tr>
-			<th>
-<!-- TODO these should be part of the inner table to simplify mobile layout reshuffling </!-->
-					Propulsion
-				</td>
-				<th>
-					Aerodynamics
-				</td>
-				<th>
-					Controls
-				</td>
-			</tr>
-			<tr>
-				<td>
+				<div class=responsive-td>
 					<table class="narrow inner">
 						<tr>
-							<th>
-								<div class="member-container blue-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
-								</div>
-							</th>
-							<th>
-								<div class="member-container blue-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
-								</div>
-							</th>
+							<th colspan=2 class=big-th> Propulsion </th>
 						</tr>
 						<tr>
-							<th> Firefly DVD </th>
-							<th> Firefly DVD </th>
+							<td>
+								<div class="member-container blue-halfbox">
+									<img class=fill src="firefly-bluray.jpg">
+								</div>
+							</td>
+							<td>
+								<div class="member-container blue-halfbox">
+									<img class=fill src="firefly-bluray.jpg">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<th class=small-th> Firefly DVD </th>
+							<th class=small-th> Firefly DVD </th>
 						</tr>
 					</table>
-				</td>
-				<td>
+				</div>
+				<div class=responsive-td>
 					<table class="narrow inner">
 						<tr>
-							<th>
-								<div class="member-container blue-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
-								</div>
-							</th>
-							<th>
-								<div class="member-container blue-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
-								</div>
-							</th>
+							<th colspan=2 class=big-th> Aerodynamics </th>
 						</tr>
 						<tr>
-							<th> Firefly DVD </th>
-							<th> Firefly DVD </th>
+							<td>
+								<div class="member-container blue-halfbox">
+									<img class=fill src="firefly-bluray.jpg">
+								</div>
+							</td>
+							<td>
+								<div class="member-container blue-halfbox">
+									<img class=fill src="firefly-bluray.jpg">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<th class=small-th> Firefly DVD </th>
+							<th class=small-th> Firefly DVD </th>
 						</tr>
 					</table>
-				</td>
-				<td>
+				</div>
+				<div class="responsive-td">
 					<table class="narrow inner">
 						<tr>
-							<th>
-								<div class="member-container blue-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
-								</div>
-							</th>
-							<th>
-								<div class="member-container blue-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
-								</div>
-							</th>
+							<th colspan=2 class=big-th> Controls </th>
 						</tr>
 						<tr>
-							<th> Firefly DVD </th>
-							<th> Firefly DVD </th>
+							<td>
+								<div class="member-container blue-halfbox">
+									<img class=fill src="firefly-bluray.jpg">
+								</div>
+							</td>
+							<td>
+								<div class="member-container blue-halfbox">
+									<img class=fill src="firefly-bluray.jpg">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<th class=small-th> Firefly DVD </th>
+							<th class=small-th> Firefly DVD </th>
 						</tr>
 					</table>
-				</td>
+				</div>
 
 			</tr>
 		</table>
