--- a/team.htm
+++ b/team.htm
@@ -21,7 +21,7 @@
 				<th colspan=3 class=big-th> Management </th>
 			</tr>
 			<tr>
-				<div class=responsive-td>
+				<td class=responsive-td>
 					<table class="inner">
 						<tr>
 							<th>
@@ -44,8 +44,8 @@
 							<td> Team Leader <br> Aerodynamic Lead </td>
 						</tr>
 					</table>
-				</div>
-				<div class=responsive-td>
+				</td>
+				<td class=responsive-td>
 					<table class="inner">
 						<tr>
 							<th>
@@ -68,8 +68,8 @@
 							<td> Team Leader <br> Aerodynamic Lead </td>
 						</tr>
 					</table>
-				</div>
-				<div class=responsive-td>
+				</td>
+				<td class=responsive-td>
 					<table class="inner">
 						<tr>
 							<th>
@@ -92,10 +92,10 @@
 							<td> Team Leader <br> Aerodynamic Lead </td>
 						</tr>
 					</table>
-				</div>
+				</td>
 			</tr>
 			<tr>
-				<div class=responsive-td>
+				<td class=responsive-td>
 					<table class="narrow inner">
 						<tr>
 							<th colspan=2 class=big-th> Propulsion </th>
@@ -117,8 +117,8 @@
 							<th class=small-th> Firefly DVD </th>
 						</tr>
 					</table>
-				</div>
-				<div class=responsive-td>
+				</td>
+				<td class=responsive-td>
 					<table class="narrow inner">
 						<tr>
 							<th colspan=2 class=big-th> Aerodynamics </th>
@@ -140,8 +140,8 @@
 							<th class=small-th> Firefly DVD </th>
 						</tr>
 					</table>
-				</div>
-				<div class="responsive-td">
+				</td>
+				<td class=responsive-td>
 					<table class="narrow inner">
 						<tr>
 							<th colspan=2 class=big-th> Controls </th>
@@ -163,7 +163,7 @@
 							<th class=small-th> Firefly DVD </th>
 						</tr>
 					</table>
-				</div>
+				</td>
 
 			</tr>
 		</table>
