Team member images are links, with animations

--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
 			<p> This year we attended the Icarus Cup, a HPA competition help yearly by the Royal Aeronautical Society, under Aerocycle. We hope to eventually attend this event with our own HPA, and to compete against other teams from around the UK. </p>
 		</div>
 		<div class="footer">
-			<a href="https://www.strathunion.com/">
+			<a href="https://www.strathunion.com/groups/find-a-society/society/hpfstrath">
 				<img class=footer-image src="union.png">
 			</a>
 			<img class=footer-image src="bar.png">
