--- a/team.htm
+++ b/team.htm
@@ -26,36 +26,17 @@
 						<tr>
 							<th>
 								<div class="member-container yellow-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
+									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
+										<img class=fill src="firefly-bluray.jpg">
+									</a>
+									</a>
 								</div>
 							</th>
 							<th>
 								<div class="member-container yellow-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
-								</div>
-							</th>
-						</tr>
-						<tr>
-							<th class=small-th> Firefly DVD </th>
-							<th class=small-th> Firefly DVD </th>
-						</tr>
-						<tr>
-							<td> Brand Manager </td>
-							<td> Team Leader <br> Aerodynamic Lead </td>
-						</tr>
-					</table>
-				</td>
-				<td class=responsive-td>
-					<table class="inner">
-						<tr>
-							<th>
-								<div class="member-container yellow-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
-								</div>
-							</th>
-							<th>
-								<div class="member-container yellow-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
+									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
+										<img class=fill src="firefly-bluray.jpg">
+									</a>
 								</div>
 							</th>
 						</tr>
@@ -74,12 +55,44 @@
 						<tr>
 							<th>
 								<div class="member-container yellow-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
+									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
+										<img class=fill src="firefly-bluray.jpg">
+									</a>
 								</div>
 							</th>
 							<th>
 								<div class="member-container yellow-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
+									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
+										<img class=fill src="firefly-bluray.jpg">
+									</a>
+								</div>
+							</th>
+						</tr>
+						<tr>
+							<th class=small-th> Firefly DVD </th>
+							<th class=small-th> Firefly DVD </th>
+						</tr>
+						<tr>
+							<td> Brand Manager </td>
+							<td> Team Leader <br> Aerodynamic Lead </td>
+						</tr>
+					</table>
+				</td>
+				<td class=responsive-td>
+					<table class="inner">
+						<tr>
+							<th>
+								<div class="member-container yellow-halfbox">
+									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
+										<img class=fill src="firefly-bluray.jpg">
+									</a>
+								</div>
+							</th>
+							<th>
+								<div class="member-container yellow-halfbox">
+									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
+										<img class=fill src="firefly-bluray.jpg">
+									</a>
 								</div>
 							</th>
 						</tr>
@@ -103,12 +116,16 @@
 						<tr>
 							<td>
 								<div class="member-container blue-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
+									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
+										<img class=fill src="firefly-bluray.jpg">
+									</a>
 								</div>
 							</td>
 							<td>
 								<div class="member-container blue-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
+									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
+										<img class=fill src="firefly-bluray.jpg">
+									</a>
 								</div>
 							</td>
 						</tr>
@@ -126,12 +143,16 @@
 						<tr>
 							<td>
 								<div class="member-container blue-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
+									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
+										<img class=fill src="firefly-bluray.jpg">
+									</a>
 								</div>
 							</td>
 							<td>
 								<div class="member-container blue-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
+									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
+										<img class=fill src="firefly-bluray.jpg">
+									</a>
 								</div>
 							</td>
 						</tr>
@@ -149,12 +170,16 @@
 						<tr>
 							<td>
 								<div class="member-container blue-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
+									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
+										<img class=fill src="firefly-bluray.jpg">
+									</a>
 								</div>
 							</td>
 							<td>
 								<div class="member-container blue-halfbox">
-									<img class=fill src="firefly-bluray.jpg">
+									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
+										<img class=fill src="firefly-bluray.jpg">
+									</a>
 								</div>
 							</td>
 						</tr>
@@ -168,7 +193,7 @@
 			</tr>
 		</table>
 		<div class="footer">
-			<a href="https://www.strathunion.com/">
+			<a href="https://www.strathunion.com/groups/find-a-society/society/hpfstrath">
 				<img class=footer-image src="union.png">
 			</a>
 			<img class=footer-image src="bar.png">
