move images to their own folder

--- a/team.htm
+++ b/team.htm
@@ -7,13 +7,13 @@
 	</head>
 	<body>
 		<div id="navbar" class="navbar">
-			<img id="hpf-logo" src="hpf.png">
+			<img id="hpf-logo" src="img/hpf.png">
 			<a class="inactive" href="index.htm">About Us</a>
 			<a class="active" href="team.htm">Team</a>
 			<a class="inactive" href="aircraft.htm">Aircraft and Development</a>
 			<a class="inactive" href="sponsors.htm">Sponsors</a>
 			<a class="inactive" href="contact.htm">Contact Us</a>
-			<img id="strath-logo" src="strath.png">
+			<img id="strath-logo" src="img/strath.png">
 			<a href="javascript:void(0);" class="icon" onclick="burger_menu()"><i class="fa fa-bars"></i></a>
 		</div>
 		<table class=outer>
@@ -27,7 +27,7 @@
 							<th>
 								<div class="member-container yellow-halfbox">
 									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="firefly-bluray.jpg">
+										<img class=fill src="img/firefly-bluray.jpg">
 									</a>
 									</a>
 								</div>
@@ -35,35 +35,7 @@
 							<th>
 								<div class="member-container yellow-halfbox">
 									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="firefly-bluray.jpg">
-									</a>
-								</div>
-							</th>
-						</tr>
-						<tr>
-							<th class=small-th> Firefly DVD </th>
-							<th class=small-th> Firefly DVD </th>
-						</tr>
-						<tr>
-							<td> Brand Manager </td>
-							<td> Team Leader <br> Aerodynamic Lead </td>
-						</tr>
-					</table>
-				</td>
-				<td class=responsive-td>
-					<table class="inner">
-						<tr>
-							<th>
-								<div class="member-container yellow-halfbox">
-									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="firefly-bluray.jpg">
-									</a>
-								</div>
-							</th>
-							<th>
-								<div class="member-container yellow-halfbox">
-									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="firefly-bluray.jpg">
+										<img class=fill src="img/firefly-bluray.jpg">
 									</a>
 								</div>
 							</th>
@@ -84,14 +56,42 @@
 							<th>
 								<div class="member-container yellow-halfbox">
 									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="firefly-bluray.jpg">
+										<img class=fill src="img/firefly-bluray.jpg">
 									</a>
 								</div>
 							</th>
 							<th>
 								<div class="member-container yellow-halfbox">
 									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="firefly-bluray.jpg">
+										<img class=fill src="img/firefly-bluray.jpg">
+									</a>
+								</div>
+							</th>
+						</tr>
+						<tr>
+							<th class=small-th> Firefly DVD </th>
+							<th class=small-th> Firefly DVD </th>
+						</tr>
+						<tr>
+							<td> Brand Manager </td>
+							<td> Team Leader <br> Aerodynamic Lead </td>
+						</tr>
+					</table>
+				</td>
+				<td class=responsive-td>
+					<table class="inner">
+						<tr>
+							<th>
+								<div class="member-container yellow-halfbox">
+									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
+										<img class=fill src="img/firefly-bluray.jpg">
+									</a>
+								</div>
+							</th>
+							<th>
+								<div class="member-container yellow-halfbox">
+									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
+										<img class=fill src="img/firefly-bluray.jpg">
 									</a>
 								</div>
 							</th>
@@ -117,14 +117,14 @@
 							<td>
 								<div class="member-container blue-halfbox">
 									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="firefly-bluray.jpg">
+										<img class=fill src="img/firefly-bluray.jpg">
 									</a>
 								</div>
 							</td>
 							<td>
 								<div class="member-container blue-halfbox">
 									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="firefly-bluray.jpg">
+										<img class=fill src="img/firefly-bluray.jpg">
 									</a>
 								</div>
 							</td>
@@ -144,14 +144,14 @@
 							<td>
 								<div class="member-container blue-halfbox">
 									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="firefly-bluray.jpg">
+										<img class=fill src="img/firefly-bluray.jpg">
 									</a>
 								</div>
 							</td>
 							<td>
 								<div class="member-container blue-halfbox">
 									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="firefly-bluray.jpg">
+										<img class=fill src="img/firefly-bluray.jpg">
 									</a>
 								</div>
 							</td>
@@ -171,14 +171,14 @@
 							<td>
 								<div class="member-container blue-halfbox">
 									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="firefly-bluray.jpg">
+										<img class=fill src="img/firefly-bluray.jpg">
 									</a>
 								</div>
 							</td>
 							<td>
 								<div class="member-container blue-halfbox">
 									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="firefly-bluray.jpg">
+										<img class=fill src="img/firefly-bluray.jpg">
 									</a>
 								</div>
 							</td>
@@ -194,11 +194,11 @@
 		</table>
 		<div class="footer">
 			<a href="https://www.strathunion.com/groups/find-a-society/society/hpfstrath">
-				<img class=footer-image src="union.png">
+				<img class=footer-image src="img/union.png">
 			</a>
-			<img class=footer-image src="bar.png">
+			<img class=footer-image src="img/bar.png">
 			<a href="https://www.instagram.com/hpfstrath/">
-				<img class=footer-image src="insta.png">
+				<img class=footer-image src="img/insta.png">
 			</a>
 		</div>
 
