use compressed webp images for smaller filesizes

--- a/aircraft.htm
+++ b/aircraft.htm
@@ -7,16 +7,16 @@
 	</head>
 	<body>
 		<div id="navbar" class="navbar">
-			<img id="hpf-logo" src="img/hpf.png">
+			<img id="hpf-logo" src="img/hpf.webp">
 			<a class="inactive" href="index.htm">About Us</a>
 			<a class="inactive" href="team.htm">Team</a>
 			<a class="active" href="aircraft.htm">Aircraft and Development</a>
 			<a class="inactive" href="sponsors.htm">Sponsors</a>
 			<a class="inactive" href="contact.htm">Contact Us</a>
-			<img id="strath-logo" src="img/strath.png">
+			<img id="strath-logo" src="img/strath.webp">
 			<a href="javascript:void(0);" class="icon" onclick="burger_menu()"><i class="fa fa-bars"></i></a>
 		</div>
-		<div class="bgimage white-text" style="background-image: url('img/aero-structures.png');">
+		<div class="bgimage white-text" style="background-image: url('img/aero-structures.webp');">
 			<h1> Aero-structures </h1>
 			<div class="text yellow-sides">
 				<p>In the past year Aero-Structures has designed and developed the primary aerodynamic and structural components of AETHER. We have designed a carbon fibre composite frame for the whole aircraft to be built around, which will be built by hand in house by our team.</p>
@@ -24,19 +24,19 @@
 				<p>We continue to work on other areas such as the aerodynamic fairing for the cockpit and other smaller structural issues for other subsystems.</p>
 			</div>
 		</div>
-		<div class="bgimage white-text" style="background-image: url('img/diagnostics.png');">
+		<div class="bgimage white-text" style="background-image: url('img/diagnostics.webp');">
 			<h1> Human Diagnostics </h1>
 			<div class="text yellow-sides">
 				<p> Human diagnostics has been working to ensure that the pilot's power is harnessed most efficiently. The team's main focus has been on researching a light weight carbon fibre seat and optimising the pilot position to harness maximum efficiency. </p>
 			</div>
 		</div>
-		<div class="bgimage white-text" style="background-image: url('img/propulsion.png');">
+		<div class="bgimage white-text" style="background-image: url('img/propulsion.webp');">
 			<h1> Propulsion </h1>
 			<div class="text yellow-sides">
 				<p> As the control subsystem, our job is to convert leg power into thrust, providing our aircraft with enough speed to take off and sustain flight. Innovative design along with some bold decisions have lead us to the creation of a unique drivetrain system that balances lightweight and efficiency, and that we believe will produce the force needed to get  off the ground. </p>
 			</div>
 		</div>
-		<div class="bgimage white-text" style="background-image: url('img/controls.png');">
+		<div class="bgimage white-text" style="background-image: url('img/controls.webp');">
 			<h1> Controls </h1>
 			<div class="text yellow-sides">
 				<p> Controls has spent the past year designing and modelling the elevator and rudder of AETHER. These control surfaces have 2 roles, allow the aircaft to be controlled by the pilot as well as stabilize it while in flight. </p>
@@ -47,11 +47,11 @@
 		</div>
 		<div class="footer">
 			<a href="https://www.strathunion.com/groups/find-a-society/society/hpfstrath">
-				<img class=footer-image src="img/union.png">
+				<img class=footer-image src="img/union.webp">
 			</a>
-			<img class=footer-image src="img/bar.png">
+			<img class=footer-image src="img/bar.webp">
 			<a href="https://www.instagram.com/hpfstrath/">
-				<img class=footer-image src="img/insta.png">
+				<img class=footer-image src="img/insta.webp">
 			</a>
 		</div>
 
