--- a/index.htm
+++ b/index.htm
@@ -7,32 +7,32 @@
 	</head>
 	<body>
 		<div id="navbar" class="navbar">
-			<img id="hpf-logo" src="img/hpf.png">
+			<img id="hpf-logo" src="img/hpf.webp">
 			<a class="active" href="index.htm">About Us</a>
 			<a class="inactive" href="team.htm">Team</a>
 			<a class="inactive" href="aircraft.htm">Aircraft and Development</a>
 			<a class="inactive" href="sponsors.htm">Sponsors</a>
 			<a class="inactive" href="contact.htm">Contact Us</a>
-			<img id="strath-logo" src="img/strath.png">
+			<img id="strath-logo" src="img/strath.webp">
 			<a href="javascript:void(0);" class="icon" onclick="burger_menu()"><i class="fa fa-bars"></i></a>
 		</div>
-		<img class="banner" src="img/banner.jpg">
+		<img class="banner" src="img/banner.webp">
 		<h1> Design<span class="yellow">,</span> Build<span class="yellow">,</span> Fly </h1>
 		<div class="text">
-			<img class="right yellow-shadow" src="img/team.jpg">
+			<img class="right yellow-shadow" src="img/team.webp">
 			<p> We are HPF Strath, the Human Powered Flight society from Strathclyde University, a student run organisation that consists of students, mostly of engineers, from across the university. </p>
 			<p> We were officially founded in the summer of 2022, and by a small group of 4 engineers with the aim of becoming the 2<sup>nd</sup> student led HPF team in the UK, and the 1<sup>st</sup> in Scotland. During the 2022/2023 academic year, we’ve since expanded to an active team of 15+ members. </p>
-			<img class="left blue-shadow" src="img/team2.jpg">
+			<img class="left blue-shadow" src="img/team2.webp">
 			<p> So far, we’ve completed the design for our first Human Powered Aircraft (HPA), called the A.E.T.H.E.R, and are moving into the production stage next year, as well as training a group of pilots to fly the HPA once it’s completed. </p>
 			<p> This year we attended the Icarus Cup, a HPA competition help yearly by the Royal Aeronautical Society, under Aerocycle. We hope to eventually attend this event with our own HPA, and to compete against other teams from around the UK. </p>
 		</div>
 		<div class="footer">
 			<a href="https://www.strathunion.com/groups/find-a-society/society/hpfstrath">
-				<img class=footer-image src="img/union.png">
+				<img class=footer-image src="img/union.webp">
 			</a>
-			<img class=footer-image src="img/bar.png">
+			<img class=footer-image src="img/bar.webp">
 			<a href="https://www.instagram.com/hpfstrath/">
-				<img class=footer-image src="img/insta.png">
+				<img class=footer-image src="img/insta.webp">
 			</a>
 		</div>
 
