--- a/team.htm
+++ b/team.htm
@@ -26,27 +26,27 @@
 						<tr>
 							<th>
 								<div class="member-container yellow-halfbox">
-									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="img/firefly-bluray.webp">
+									<a href="">
+										<img class=fill src="img/aryaman.webp">
 									</a>
 									</a>
 								</div>
 							</th>
 							<th>
 								<div class="member-container yellow-halfbox">
-									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="img/firefly-bluray.webp">
+									<a href="">
+										<img class=fill src="img/oscar.webp">
 									</a>
 								</div>
 							</th>
 						</tr>
 						<tr>
-							<th class=small-th> Firefly DVD </th>
-							<th class=small-th> Firefly DVD </th>
+							<th class=small-th> Aryaman Verna </th>
+							<th class=small-th> Oscar Lowe </th>
 						</tr>
 						<tr>
-							<td> Brand Manager </td>
-							<td> Team Leader <br> Aerodynamic Lead </td>
+							<td> Human Diagnostics Lead, <br> Coach </td>
+							<td> Propulsion Lead </td>
 						</tr>
 					</table>
 				</td>
@@ -55,8 +55,8 @@
 						<tr>
 							<th>
 								<div class="member-container yellow-halfbox">
-									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="img/firefly-bluray.webp">
+									<a href="">
+										<img class=fill src="img/owen.webp">
 									</a>
 								</div>
 							</th>
@@ -69,11 +69,11 @@
 							</th>
 						</tr>
 						<tr>
-							<th class=small-th> Firefly DVD </th>
+							<th class=small-th> Owen Ketels </th>
 							<th class=small-th> Firefly DVD </th>
 						</tr>
 						<tr>
-							<td> Brand Manager </td>
+							<td> Control Lead </td>
 							<td> Team Leader <br> Aerodynamic Lead </td>
 						</tr>
 					</table>
